unpackaged/main/default/objects/Mobile_Dynamic__c/Mobile_Dynamic__c.object-meta.xml
<CustomObject>
    <description>Used for create/read records from the Mobile Bio Hub App</description>
    <label>Mobile Dynamic</label>
    <nameField>
        <displayFormat>MOD-{000000}</displayFormat>
        <label>Mobile Dynamic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Dynamic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>