unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Used for Street/Address Capture of Mobile Lead</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>