unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Alternate_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate Billing Address</label>
    <type>Checkbox</type>
</CustomField>