unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Alternate_Billing_Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Billing_Address_Details__c</fullName>
    <label>Alternate Billing Address Details</label>
    <type>TextArea</type>
</CustomField>