unpackaged/main/default/objects/Mobile_Dynamic__c/fields/App_Login__c.field-meta.xml
<CustomField>
    <fullName>App_Login__c</fullName>
    <label>App Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>