unpackaged/main/default/objects/Mobile_Dynamic__c/fields/App_User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>App_User_Email_Address__c</fullName>
    <label>App User Email Address</label>
    <type>Email</type>
</CustomField>