unpackaged/main/default/objects/Mobile_Dynamic__c/fields/AttachemntIdBasedOnbase64field__c.field-meta.xml
<CustomField>
    <fullName>AttachemntIdBasedOnbase64field__c</fullName>
    <label>AttachemntIdBasedOnbase64field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>