unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Billing_Address_For_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_For_Email__c</fullName>
    <formula>IF( Alternate_Billing_Address__c = TRUE,  Alternate_Billing_Address_Details__c ,  Address__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address For Email</label>
    <type>Text</type>
</CustomField>