unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Bio_Email_for_Mobile_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Bio_Email_for_Mobile_Refresh__c</fullName>
    <label>Bio Email for Mobile Refresh</label>
    <type>Email</type>
</CustomField>