unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Biocomposites_Address_For_Email_Footer__c.field-meta.xml
<CustomField>
    <fullName>Biocomposites_Address_For_Email_Footer__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biocomposites Address For Email Footer</label>
    <type>Text</type>
</CustomField>