unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Biocomposites_Company_Name_For_Email_Foo__c.field-meta.xml
<CustomField>
    <fullName>Biocomposites_Company_Name_For_Email_Foo__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biocomposites_Company Name For Email Foo</label>
    <type>Text</type>
</CustomField>