unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Company_Name_For_Template__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_For_Template__c</fullName>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name For Template</label>
    <type>Text</type>
</CustomField>