unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <label>Contact Information</label>
    <type>TextArea</type>
</CustomField>