unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Contact_Information_for_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_for_email__c</fullName>
    <formula>IF( ISBLANK( Contact_Information__c ), 
&quot;Email: &quot;&amp; Email__c &amp;BR()&amp;
&quot;Telephone: &quot;&amp; Telephone__c &amp;BR()&amp;
&quot;Address: &quot;&amp; Address__c &amp;BR()&amp;
&quot;State: &quot;&amp; State__c &amp;BR()&amp;
&quot;Zip: &quot;&amp; ZIP__c &amp;BR()&amp;
&quot;Country: &quot;&amp; Country__c 
, Contact_Information__c)</formula>
    <label>Contact Information for email</label>
    <type>Text</type>
</CustomField>