unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Used to capture Country for Mobile Lead</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>