unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <description>The date the record was submitted and saved on the device</description>
    <inlineHelpText>The date the record was created on the app</inlineHelpText>
    <label>Date Entered</label>
    <type>DateTime</type>
</CustomField>