unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>Owner:User.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>