unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Used to capture for email for Mobile Lead or Requestors Email</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>