unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Email_for_distributor__c.field-meta.xml
<CustomField>
    <fullName>Email_for_distributor__c</fullName>
    <label>Email for distributor</label>
    <type>Email</type>
</CustomField>