unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Email_for_footer__c.field-meta.xml
<CustomField>
    <fullName>Email_for_footer__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) ,  Owner:User.Email  ,  Owner:User.Contact.Email  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email for footer</label>
    <type>Text</type>
</CustomField>