unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Email_for_Regional_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Regional_New_Account__c</fullName>
    <label>Email for Regional New Account</label>
    <type>Email</type>
</CustomField>