unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Email_formule_for_email__c.field-meta.xml
<CustomField>
    <fullName>Email_formule_for_email__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) ,   Owner:User.Email   ,   Owner:User.Contact.Email   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email formule for email</label>
    <type>Text</type>
</CustomField>