unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <inlineHelpText>Used to capture the Event Name for Mobile Lead</inlineHelpText>
    <label>Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>