unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Favourite__c.field-meta.xml
<CustomField>
    <fullName>Favourite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to allow the user (owner of the record) to create a relationship used as a favourite to an App Info / Hospital in Surgeon</description>
    <inlineHelpText>A lookup to allow the user (owner of the record) to create a relationship used as a favourite to an App Info / Hospital in Surgeon</inlineHelpText>
    <label>Favourite</label>
    <referenceTo>Surgeon_in_Hospital__c</referenceTo>
    <relationshipLabel>Favourited</relationshipLabel>
    <relationshipName>Mobile_Dynamic</relationshipName>
    <type>Lookup</type>
</CustomField>