unpackaged/main/default/objects/Mobile_Dynamic__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>Used for Lead First name</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>