unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Hospital_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Contact_Info__c</fullName>
    <label>Hospital Contact Info</label>
    <type>TextArea</type>
</CustomField>