unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Hospital_Institution__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Institution__c</fullName>
    <inlineHelpText>Used to capture hospital info for Mobile Lead</inlineHelpText>
    <label>Hospital/Institution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>