unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <label>Hospital Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>