unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Is_this_from_a_distributor__c.field-meta.xml
<CustomField>
    <fullName>Is_this_from_a_distributor__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) , FALSE, TRUE)</formula>
    <label>Is this from a distributor?</label>
    <type>Checkbox</type>
</CustomField>