unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>Used for Lead Job Title</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>