unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Used for Lead Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>