unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Lead_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Address__c</fullName>
    <inlineHelpText>Lead email address based on app users territory, either defined on the user record or contact record
*this is the internal biocomposites email address</inlineHelpText>
    <label>Biocomposites email address for lead</label>
    <type>Email</type>
</CustomField>