unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Lead_name__c.field-meta.xml
<CustomField>
    <fullName>Lead_name__c</fullName>
    <formula>Event_Name__c</formula>
    <label>Lead name</label>
    <type>Text</type>
</CustomField>