unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Lead_Photo_Base64__c.field-meta.xml
<CustomField>
    <fullName>Lead_Photo_Base64__c</fullName>
    <label>Lead Photo Base64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>