unpackaged/main/default/objects/Mobile_Dynamic__c/fields/M_D_Attachment__c.field-meta.xml
<CustomField>
    <fullName>M_D_Attachment__c</fullName>
    <formula>&quot;/servlet/servlet.FileDownload?file=&quot;&amp;AttachemntIdBasedOnbase64field__c</formula>
    <label>M/D Attachment</label>
    <type>Text</type>
</CustomField>