unpackaged/main/default/objects/Mobile_Dynamic__c/fields/MC_Proxy_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Proxy_ID__c</fullName>
    <inlineHelpText>Used for the MobileCaddy Package - DO NOT DELETE</inlineHelpText>
    <label>MC_Proxy_ID</label>
    <type>TextArea</type>
</CustomField>