unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Name_Title_Inst_for_email__c.field-meta.xml
<CustomField>
    <fullName>Name_Title_Inst_for_email__c</fullName>
    <formula>IF( ISBLANK( Name_Title_Institution__c ), Lead_name__c&amp;BR() &amp; Job_Title__c &amp;BR()&amp; Hospital_Institution__c ,
Name_Title_Institution__c)</formula>
    <label>Name Title Inst for email</label>
    <type>Text</type>
</CustomField>