unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Name_Title_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_Title_Institution__c</fullName>
    <label>Name/Title/Institution</label>
    <type>TextArea</type>
</CustomField>