unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Used to capture Notes from Mobile Lead</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>