unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Other_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Product</label>
    <type>Checkbox</type>
</CustomField>