unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Other_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Details__c</fullName>
    <label>Other Product Details</label>
    <type>TextArea</type>
</CustomField>