unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) , Owner:User.Country , TEXT(Owner:User.Contact.Account.Territory__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>