unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Phone_Number_For_Email__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_For_Email__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) ,  Owner:User.Phone  ,  Owner:User.Contact.Phone  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number For Email</label>
    <type>Text</type>
</CustomField>