unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Used to capture the Product on Mobile Lead capture</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STIMULAN</fullName>
            </value>
            <value>
                <fullName>geneX</fullName>
                <label>genex</label>
            </value>
            <value>
                <fullName>Allogran-R</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>