unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Product_Selected__c.field-meta.xml
<CustomField>
    <fullName>Product_Selected__c</fullName>
    <formula>IF( STIMULAN_Bullet__c = true, &quot;STIMULAN Bullet Mat and Introducer: &quot;&amp;TEXT(CurrencyIsoCode)&amp;&quot; &quot;&amp; TEXT(STIMULAN_Bullet_Price__c) &amp;BR(), NULL)
&amp;
IF(STIMULAN_Kit_5cc__c  = true, &quot;STIMULAN Kit 5cc: &quot;&amp;  TEXT(CurrencyIsoCode)&amp;&quot; &quot;&amp;TEXT(STIMULAN_Kit_5cc_Price__c) &amp;BR(), NULL)
&amp;
IF(STIMULAN_Kit_10cc__c  = true, &quot;STIMULAN Kit 10cc: &quot;&amp;TEXT(CurrencyIsoCode) &amp;&quot; &quot;&amp; TEXT(STIMULAN_Kit_10cc_Price__c) &amp;BR(), NULL)
&amp;
IF(STIMULAN_Rapid_Cure_5cc__c = true, &quot;STIMULAN Rapid Cure 5cc: &quot;&amp;TEXT(CurrencyIsoCode)&amp;&quot; &quot; &amp; TEXT( STIMULAN_Rapid_Cure_5cc_Price__c ) &amp;BR(), NULL)
&amp;
IF(STIMULAN_Rapid_Cure_10cc__c = true, &quot;STIMULAN Rapid Cure 10cc: &quot;&amp;TEXT(CurrencyIsoCode) &amp;&quot; &quot;&amp; TEXT( STIMULAN_Rapid_Cure_10cc_Price__c ) &amp;BR(), NULL)
&amp;
IF(STIMULAN_Rapid_Cure_20cc__c = true, &quot;STIMULAN Rapid Cure 20cc: &quot;&amp;TEXT(CurrencyIsoCode)&amp;&quot; &quot; &amp; TEXT( STIMULAN_Rapid_Cure_20cc_Price__c ) &amp;BR(), NULL)
&amp;
IF( Other_Product__c = true, &quot;Other: &quot;&amp;  Other_Product_Details__c , NULL)</formula>
    <label>Product Selected</label>
    <type>Text</type>
</CustomField>