unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Ready_To_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Send_Email__c</fullName>
    <formula>IF( Is_this_from_a_distributor__c = TRUE, 
IF(
AND
(NOT( ISBLANK( Email_for_distributor__c ))
,NOT( ISBLANK(App_User_Email_Address__c)),
NOT( ISBLANK(Email_for_Regional_New_Account__c))), true, NULL) , 
IF(
AND(NOT( ISBLANK( App_User_Email_Address__c )),
NOT( ISBLANK( Email_for_Regional_New_Account__c ))), true, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready To Send Email?</label>
    <type>Checkbox</type>
</CustomField>