unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Rep_Terriroty__c.field-meta.xml
<CustomField>
    <fullName>Rep_Terriroty__c</fullName>
    <formula>TEXT(CreatedBy.Contact.Account.Territory__c )</formula>
    <label>Rep Terriroty</label>
    <type>Text</type>
</CustomField>