unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Request_Target_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Target_Response_Date__c</fullName>
    <label>Request Target Response Date</label>
    <type>Date</type>
</CustomField>