unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Request type for unsolicited requests</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>