unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Requested_Information__c.field-meta.xml
<CustomField>
    <fullName>Requested_Information__c</fullName>
    <inlineHelpText>Used to capture Requested Information on Unsolicited Request</inlineHelpText>
    <label>Requested Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>