unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Requestors_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestors_Name__c</fullName>
    <inlineHelpText>Used to capture Requestors Name on Unsolicited Request</inlineHelpText>
    <label>Requestors Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>