unpackaged/main/default/objects/Mobile_Dynamic__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Used for State/Province capture of Mobile Lead</inlineHelpText>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>