unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to set the status of the a favourite (can be extended for use on other record types)</description>
    <inlineHelpText>Used to set the status of the a favourite (can be extended for use on other record types)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>