unpackaged/main/default/objects/Mobile_Dynamic__c/fields/STIMULAN_Bullet__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Bullet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Bullet Mat and Introducer</label>
    <type>Checkbox</type>
</CustomField>