unpackaged/main/default/objects/Mobile_Dynamic__c/fields/STIMULAN_Kit_5cc__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Kit_5cc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Kit 5cc</label>
    <type>Checkbox</type>
</CustomField>