unpackaged/main/default/objects/Mobile_Dynamic__c/fields/STIMULAN_Rapid_Cure_10cc__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Rapid_Cure_10cc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Rapid Cure 10cc</label>
    <type>Checkbox</type>
</CustomField>