unpackaged/main/default/objects/Mobile_Dynamic__c/fields/STIMULAN_Rapid_Cure_5cc_Price__c.field-meta.xml
<CustomField>
    <fullName>STIMULAN_Rapid_Cure_5cc_Price__c</fullName>
    <label>STIMULAN Rapid Cure 5cc Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>