unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <inlineHelpText>Used to capture phone number on Mobile Lead</inlineHelpText>
    <label>Telephone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>