unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Telephone_for_footer__c.field-meta.xml
<CustomField>
    <fullName>Telephone_for_footer__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) ,  Owner:User.Phone  ,  Owner:User.Contact.Phone  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone for footer</label>
    <type>Text</type>
</CustomField>