unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Territory_Email__c.field-meta.xml
<CustomField>
    <fullName>Territory_Email__c</fullName>
    <label>Biocomposites email address for request</label>
    <type>Email</type>
</CustomField>