unpackaged/main/default/objects/Mobile_Dynamic__c/fields/Title_Designation__c.field-meta.xml
<CustomField>
    <fullName>Title_Designation__c</fullName>
    <inlineHelpText>Used for Salutation</inlineHelpText>
    <label>Title/Designation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>