unpackaged/main/default/objects/Mobile_Dynamic__c/fields/User_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Job_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <label>User Job Title</label>
    <type>Text</type>
</CustomField>