unpackaged/main/default/objects/Mobile_Dynamic__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <inlineHelpText>Used for ZIP/Postcode for Mobile Lead capture</inlineHelpText>
    <label>ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>