unpackaged/main/default/objects/Mobile_Dynamic__c/recordTypes/Favourite_Hospital.recordType-meta.xml
<RecordType>
    <fullName>Favourite_Hospital</fullName>
    <active>true</active>
    <description>Used to create a Favourite for an App User to a Hospital (SIH record)</description>
    <label>Favourite Hospital</label>
</RecordType>