unpackaged/main/default/objects/Mobile_Dynamic__c/recordTypes/Favourite_Surgeon.recordType-meta.xml
<RecordType>
    <fullName>Favourite_Surgeon</fullName>
    <active>true</active>
    <description>Used to create a Favourite for an App User to a Surgeon in Hospital (SIH record)</description>
    <label>Favourite Surgeon</label>
</RecordType>