unpackaged/main/default/objects/Mobile_Dynamic__c/recordTypes/Mobile_Lead.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Lead</fullName>
    <active>true</active>
    <description>Used to record Leads from the Bio Hub Mobile Apps</description>
    <label>Mobile Lead</label>
</RecordType>