unpackaged/main/default/objects/Mobile_Dynamic__c/recordTypes/New_Account.recordType-meta.xml
<RecordType>
    <fullName>New_Account</fullName>
    <active>true</active>
    <description>Used to record New Accounts from the Bio Hub Mobile Apps</description>
    <label>New Account</label>
</RecordType>