unpackaged/main/default/objects/Mobile_Dynamic__c/recordTypes/Unsolicited_Request.recordType-meta.xml
<RecordType>
    <fullName>Unsolicited_Request</fullName>
    <active>true</active>
    <description>Used to record unsolicited requests from the Bio Hub Mobile Apps</description>
    <label>Unsolicited Request</label>
</RecordType>