unpackaged/main/default/objects/Mobile_Dynamic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Type__c</columns>
    <columns>Requestors_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Date_Entered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>