unpackaged/main/default/objects/Mobile_Dynamic__c/listViews/Leads.listView-meta.xml
<ListView>
    <fullName>Leads</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Send_Email__c</columns>
    <columns>Date_Entered__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Dynamic__c.Mobile_Lead</value>
    </filters>
    <label>Leads</label>
</ListView>