unpackaged/main/default/objects/Mobile_Dynamic__c/listViews/Requests.listView-meta.xml
<ListView>
    <fullName>Requests</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Type__c</columns>
    <columns>Requestors_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Date_Entered__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mobile_Dynamic__c.Unsolicited_Request</value>
    </filters>
    <label>Unsolicited Requests</label>
</ListView>